<resources>
    <string name="app_name">My Second App</string>
    <string name="confirm">CONFIRM NOW</string>
    <string name="testString">Test</string>
    <string name="title">Registration Form</string>
    <string name="greet">Welcome to Adventure Learning Club!</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="studentID">Student ID</string>
    <string name="school">School</string>
    <string name="email">E-mail</string>
    <string name="phone">Phone</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
</resources>
